@@ -1,3 +1,14 @@
+2003-01-29  Jeff Hobbs  <jeffh@ActiveState.com>
+
+	* library/pkgIndex.tcl.in (new):
+	* library/pkgIndex.tcl: Replace pkgIndex.tcl with one that is
+	* configure:            generated by configure to include the right
+	* configure.in:         vfs dll name.  Left the old one for
+	* Makefile.in:          non-configure users, but it can be wrong.
+	Also added tarvfs.tcl to list of files to install.
+
+	* library/vfsUtils.tcl: code cleanup
+
 2003-01-28  Vince Darley <vincentdarley@sourceforge.net>
 	* library/*.tcl: add 'package provide vfs::<name>' to the
 	virtual filesystems.  These are the current versions:
